--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 <body>
 
+    <div>
+        <h1>
+            <center>Solaris Sanctuary</center>
+        </h1>
+    </div>
+    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vel quisquam maiores sed obcaecati quia laboriosam ipsa, corrupti molestiae eius ad quam doloremque quibusdam atque repudiandae minus neque ipsum blanditiis.</p>
-
+    
 </body>
 
 </html>
