--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-
+	
+	<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Solaris Sanctuary</title>
     <link rel="stylesheet" href="styles.css">
 
@@ -15,6 +17,10 @@
             <center>Solaris Sanctuary</center>
         </h1>
     </div>
+	
+	<hr class="whitespace">
+	
+	<a href="links.html">Useful Links</a>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vel quisquam maiores sed obcaecati quia laboriosam ipsa, corrupti molestiae eius ad quam doloremque quibusdam atque repudiandae minus neque ipsum blanditiis.</p>
     
