--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Solaris Sanctuary</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
 </head>
 
@@ -20,8 +20,12 @@
 	
 	<hr class="whitespace">
 	
-	<a href="links.html">Useful Links</a>
+    <ul>
+	    <li><a href="links.html">Useful Links</a></li>
+        <li><a href="https://floridapoly.presence.io/">Events</a></li>
+    </ul>
     
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, vel quisquam maiores sed obcaecati quia laboriosam ipsa, corrupti molestiae eius ad quam doloremque quibusdam atque repudiandae minus neque ipsum blanditiis.</p>
     
 </body>
