--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Solaris Sanctuary</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 
 <body>
 
     <div>
+        <hr class="purplebar">
+
         <h1>
             <center>Solaris Sanctuary</center>
         </h1>
+
+        <hr class="purplebar">
     </div>
-	
-	<hr class="whitespace">
 	
     <ul>
 	    <li><a href="links.html">Useful Links</a></li>
-        <li><a href="https://floridapoly.presence.io/">Events</a></li>
+        <li><a href="https://floridapoly.presence.io/events/">Events</a></li>
     </ul>
     
 
