--- a/links.html
+++ b/links.html
@@ -13,12 +13,15 @@
 <body>
 
     <div>
+        <hr class="purplebar">
+
         <h1>
             <center>Useful Links</center>
         </h1>
+
+        <hr class="purplebar">
+        
     </div>
-	
-	<hr class="whitespace">
    
     <p>*links go here*</p>
 
