--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
     <meta name="viewport" content="width=device-width" />
     <title>Solaris Sanctuary</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
 
-    <div>
-        <hr class="purplebar">
-
+    <div class="header">
+        
+        <br>
         <h1>
             <center>Solaris Sanctuary</center>
         </h1>
+        <br>
 
-        <hr class="purplebar">
     </div>
 	
     <ul>
