--- a/numbers.html
+++ b/numbers.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Useful Links</title>
+    <title>Useful Numbers</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -22,16 +23,10 @@
         
         <br>
         <h1>
-            <center>Useful Links</center>
+            <center>Numbers to Know</center>
         </h1>
         <br>
 
-    </div>
-   
-    <p>*links go here*</p>
-
-    <div>
-        <img src="photos/birthday.jpg" alt="Solaris in birthday fit">
     </div>
 
 </body>
