--- a/pages/links.html
+++ b/pages/links.html
@@ -26,7 +26,7 @@
 
         <div>
             <ul class="navbar horizontal">
-                <li class="horlist first"><a href="index.html">Home</a></li>
+                <li class="horlist first"><a href="../index.html">Home</a></li>
                 <li class="horlist"><a href="links.html">Useful Links</a></li>
                 <li class="horlist"><a href="https://floridapoly.presence.io/events/">Events</a></li>
                 <li class="horlist"><a href="numbers.html">Useful Numbers</a></li>
