updated nav bar

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         </div>
 
         <div>
-            <ul class="navbar horizontal">
-                <li class="horlist first"><a href="index.html">Home</a></li>
-                <li class="horlist"><a href="pages/links.html">Useful Links</a></li>
-                <li class="horlist"><a href="https://floridapoly.presence.io/events/">Events</a></li>
-                <li class="horlist"><a href="pages/numbers.html">Useful Numbers</a></li>
-                <li class="horlist"><a href="https://beachdyl.com/poly/discords/">Discord Masterlist</a></li>
-            </ul>
+            <nav class="sticky">
+                <ul class="navbar horizontal">
+                    <li class="horlist first"><a href="index.html" class="hover-underline-animation">Home</a></li>
+                    <li class="horlist"><a href="pages/links.html" class="hover-underline-animation">Useful Links</a></li>
+                    <li class="horlist"><a href="https://floridapoly.presence.io/events/" class="hover-underline-animation">Events</a></li>
+                    <li class="horlist"><a href="pages/numbers.html" class="hover-underline-animation">Useful Numbers</a></li>
+                    <li class="horlist"><a href="https://beachdyl.com/poly/discords/" class="hover-underline-animation">Discord Masterlist</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 
