--- a/pages/links.html
+++ b/pages/links.html
@@ -25,8 +25,8 @@
         </div>
 
         <div>
-            <nav class="sticky">
-                <ul class="navbar horizontal">
+            <nav id="navbar">
+                <ul class="bar horizontal" id="menu">
                     <li class="horlist first"><a href="../index.html" class="hover-underline-animation">Home</a></li>
                     <li class="horlist"><a href="links.html" class="hover-underline-animation">Useful Links</a></li>
                     <li class="horlist"><a href="https://floridapoly.presence.io/events/" class="hover-underline-animation">Events</a></li>
@@ -40,11 +40,28 @@
     <br>
 
     <div class="content">
+
         <h1>Useful Links</h1>
+
+        <h2>Here are some links every student should know of:</h2>
+        
+        <div>
+            <ul>
+                <li><a href="https://floridapoly.edu/i-am-a/current-student.php">Current Student Portal</a></li>
+                <li><a href="https://floridapolystudentliving.residentportal.com/auth">Resident Portal</a></li>
+                <li><a href="https://cams.floridapoly.org/student/login.asp">CAMS Login</a></li>
+                <li><a href="https://floridapoly.edu/academics/academic-calendar/index.php">Academic Calendar</a></li>
+                <li><a href="https://floridapoly.edu/student-affairs/health-wellness/disability-services.php">Disability Services</a></li>
+                <li><a href="https://floridapolytechnic.instructure.com/">Canvas Login</a></li>
+                <li><a href="https://floridapoly.edu/student-affairs/library.php">Online Library</a></li>
+                <li><a href="https://floridapoly.edu/student-affairs/health-wellness/index.php">CARE Services</a></li>
+            </ul>
+        </div>
    
     <br>
 
-        <img src="photos/birthday.jpg" alt="Solaris in birthday fit">
+        <img src="../photos/birthday.jpg" alt="Solaris in birthday fit">
+
     </div>
 
 </body>
