--- a/pages/numbers.html
+++ b/pages/numbers.html
@@ -25,8 +25,8 @@
         </div>
 
         <div>
-            <nav class="sticky">
-                <ul class="navbar horizontal">
+            <nav id="navbar">
+                <ul class="bar horizontal" id="menu">
                     <li class="horlist first"><a href="../index.html" class="hover-underline-animation">Home</a></li>
                     <li class="horlist"><a href="links.html" class="hover-underline-animation">Useful Links</a></li>
                     <li class="horlist"><a href="https://floridapoly.presence.io/events/" class="hover-underline-animation">Events</a></li>
