--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <title>Solaris Sanctuary</title>
+    <title>Home - Solaris Sanctuary</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/photos/favicon-16x16.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +25,7 @@
                     <li class="horlist"><a href="https://floridapoly.presence.io/events/" class="hover-underline-animation">Events</a></li>
                     <li class="horlist"><a href="pages/numbers.html" class="hover-underline-animation">Useful Numbers</a></li>
                     <li class="horlist"><a href="https://beachdyl.com/poly/discords/" class="hover-underline-animation">Discord Masterlist</a></li>
+                    <li class="horlist"><a href="pages/residents.html" class=""hover-underline-animation>Residents</a></li>
                 </ul>
             </nav>
         </div>
