--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
     <title>Home - Solaris Sanctuary</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/photos/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/photos/Solaris 16x16.png">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
