Started css files and worked on the navigation bar

--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 
 <head>
 	
+    <!--Page Setup-->
 	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
     <title>Home - Solaris Sanctuary</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/photos/Solaris 16x16.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="shortcut icon" href="/photos/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/photos/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/text_styles.css">
+    <link rel="stylesheet" href="styles/main_styles.css">
+
+    <!--Font Families-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
 
 </head>
+
+<body>
+
+    <!--Set Up Navigation Bar-->
+    <div id="heading">
+        <ul id="heading_nav_bar">
+            <li class="navbar"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
+            <li class="paytone-one-regular navbar">Solaris Sanctuary</li>
+            <li>Home</li>
+        </ul>
+    </div>
+
+</body>
+
 </html>
