--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
 
     <!--Set Up Navigation Bar-->
     <div id="heading">
-        <ul id="heading_nav_bar">
-            <li class="navbar"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
-            <li class="paytone-one-regular navbar">Solaris Sanctuary</li>
-            <li>Home</li>
-        </ul>
+        <div style="padding-left: 15%; width: 75%; height: 100%;">
+            <ul id="heading_nav_bar">
+                <li class="navbar"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
+                <li class="paytone-one-regular navbar">Solaris Sanctuary</li>
+                <li style="padding-left: 0%; padding-right: 0px;" class="navbar">
+                    <div class="dropdown">
+                        <img id="barmenu" src="photos/bar.png" alt="dropdown button">
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 
 </body>
