--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!--Set Up Navigation Bar-->
     <div id="heading">
-        <div style="padding-left: 15%; width: 75%; height: 100%;">
+        <div style="padding-left: 15%; width: 75%; height: 100%;" id="container">
             <ul id="heading_nav_bar">
                 <li class="navbar"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
                 <li class="paytone-one-regular navbar">Solaris Sanctuary</li>
