--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
 
     <!--Set Up Navigation Bar-->
     <div id="heading">
-        <div style="padding-left: 15%; width: 75%; height: 100%;" id="container">
+        <div id="container">
             <ul id="heading_nav_bar">
-                <li class="navbar"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
-                <li class="paytone-one-regular navbar">Solaris Sanctuary</li>
-                <li style="padding-left: 0%; padding-right: 0px;" class="navbar">
-                    <div class="dropdown">
-                        <img id="barmenu" src="photos/bar.png" alt="dropdown button">
-                    </div>
-                </li>
+                <li class="navbar photo_container"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
+                <li class="paytone-one-regular navbar" id="title_text" style="font-size: 3.25vw;">Solaris Sanctuary</li>
             </ul>
+            <div class="dropdown">
+                <img id="barmenu" src="photos/bar.png" alt="dropdown button">
+            </div>
         </div>
     </div>
 
