Worked on navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="container">
             <ul id="heading_nav_bar">
                 <li class="navbar photo_container"><a href="index.html"><img id="icon_photo" src="photos/Solaris.png" alt="Solaris"></a></li>
-                <li class="paytone-one-regular navbar" id="title_text" style="font-size: 3.25vw;">Solaris Sanctuary</li>
+                <li class="paytone-one-regular navbar" id="title_text">Solaris Sanctuary</li>
             </ul>
             <div class="dropdown">
                 <img id="barmenu" src="photos/bar.png" alt="dropdown button">
